# tree-sitter-datawindow

./: CMakeLists.txt  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml  lint.yml
bindings/c/: tree-sitter-datawindow-expression.pc.in  tree-sitter-datawindow-syntax.pc.in  tree-sitter-datawindow.pc.in
bindings/c/tree_sitter/: tree-sitter-datawindow-expression.h  tree-sitter-datawindow-syntax.h  tree-sitter-datawindow.h
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
grammars/datawindow_expression/: grammar.js  package.json
grammars/datawindow_expression/src/: grammar.json  node-types.json  parser.c
grammars/datawindow_syntax/: grammar.js  package.json
grammars/datawindow_syntax/examples/: d_cad_fornecedor.srd
grammars/datawindow_syntax/src/: grammar.json  parser.c
src/: grammar.json  node-types.json  parser.c
test/corpus/: datawindow__syntax_statements.txt  datawindow_expression.txt  datawindow_statements.txt
